--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "jest-junit": {
     "suiteName": "jest tests",
-    "outputDirectory": "test-results",
+    // "outputDirectory": "test-results",
+    "outputDirectory": "jest-results",
     "outputName": "junit.xml",
     "uniqueOutputName": "false",
     "classNameTemplate": "{classname}-{title}",
